--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2? family= Raleway:wght@700 & family= Roboto+Condensed & display=swap');
+@import url('https://fonts.googleapis.com/css2? family= Raleway:wght@700 & family=Fira+Sans:wght@400;500;700&display=swap');
 
 * {
     box-sizing: border-box;
@@ -8,7 +8,12 @@ html {
     font-size: 14px;
 }
 
-body { font-family: "Noto sans",'Courier New', Courier, monospace;   
+body { 
+    font-family: "Fira Sans",'Courier New', Courier, monospace,;   
+}
+
+h2 {
+    font-family: "Raleway",'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 body, h1, h2, p, figure, .menu, img {
@@ -176,9 +181,6 @@ nav h2 a {
     text-align: center;
 }
 
-#contribuicao {
-
-}
 
 
 
