--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,40 @@ nav h2 a {
     text-align: center;
 }
 
+#container-selecao {
+    margin-top: 15px;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+#container-selecao label {
+    background-color: #F28705;
+    color: #fffffa;
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 26px;
+    height: 8rem;
+    width: 10rem;
+    margin: 5px 3px;
+}
+
+#container-selecao input {
+    margin: 1.3rem;
+    width: 20px;
+    height: 20px;
+}
+
+#container-selecao form {
+    margin-top: 18px;
+    font-size: 14px;
+    line-height: 3rem;
+    text-align: center;
+    max-width: 150px;
+}
+
 
 
 
