--- a/css/style.css
+++ b/css/style.css
@@ -177,20 +177,23 @@ nav h2 a {
     margin-bottom: 1rem;
 }
 
-#contribuicao h2 {
+#contribuicao h2, #formas-de-pagamento h2 {
     text-align: center;
 }
 
 #container-selecao {
     margin-top: 15px;
+    margin-bottom: 15px;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 5px;
     flex-wrap: wrap;
 }
 
 #container-selecao label {
     background-color: #F28705;
     color: #fffffa;
+    font-family: "raleway",'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 20px;
     display: flex;
     flex-direction: column;
@@ -201,6 +204,24 @@ nav h2 a {
     margin: 5px 3px;
 }
 
+#container-selecao .caixas .inputs {
+    width: 90%;
+    padding: 5px;
+    /* color: rgb(150,150,150); */
+    border: 0;
+    background-color: #F28705;
+    border-bottom: 2px solid white;
+    outline: 0;
+}
+
+/* #container-selecao .caixas .inputs:focus {
+    border-bottom: 2px solid cornflowerblue;
+} */
+
+#container-selecao .caixas textarea::placeholder {
+    color: #fffffa;
+}
+
 #container-selecao input {
     margin: 1.3rem;
     width: 20px;
@@ -209,11 +230,82 @@ nav h2 a {
 
 #container-selecao form {
     margin-top: 18px;
-    font-size: 14px;
+    font-size: 12px;
     line-height: 3rem;
     text-align: center;
     max-width: 150px;
 }
+
+/* Formulário */
+#container-formulario {
+    display: flex;
+    justify-content: center;
+}
+
+#container-formulario form {
+    width: 100%;
+    max-width: 350px;
+}
+
+#container-formulario .caixas {
+    width: 100%;
+    margin: 30px 0;
+}
+
+#container-formulario label {
+    font-size: 17px;
+}
+
+#container-formulario .caixas .inputs {
+    width: 100%;
+    padding: 5px;
+    color: rgb(150,150,150);
+    border: 0;
+    border-bottom: 2px solid rgb(200,200,200);
+    outline: 0;
+}
+
+#container-formulario .caixas .inputs:focus {
+    border-bottom: 2px solid cornflowerblue;
+}
+
+/* Formas de pagamento */
+#container-formas:not(button) {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+#container-formas label {
+    background-color: #8C0303;
+    color: #fffffa;
+    text-transform: uppercase;
+    font-family: "raleway",'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border-radius: 23px;
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    width: 28rem;
+    height: 4rem;
+}
+
+#container-formas input {
+    width: 40px;
+    height: 4opx;
+}
+
+#container-formas button {
+    background-color: #8C0303;
+    color: #fffffa;
+    font-family: "raleway",'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border-radius: 15px;
+    text-transform: uppercase;
+    padding: 10px 15px;
+}
+
 
 
 
