--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,6 @@ nav h2 a {
 }
 
 /* Contribução */
-
 #container-contribuicao p {
     text-align: left;
     margin-top: 22px;
@@ -199,6 +198,10 @@ nav h2 a {
     justify-content: center;
     gap: 5px;
     flex-wrap: wrap;
+}
+
+input {
+    accent-color: #8C0303;
 }
 
 #container-selecao label {
@@ -253,68 +256,49 @@ nav h2 a {
 #container-formulario {
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 #container-formulario2 {
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
-#container-formulario form {
-    width: 100%;
-    max-width: 350px;
+.input-group {
+    position: relative;
+    margin-bottom: 20px;
 }
 
-#container-formulario2 form {
-    width: 100%;
-    max-width: 350px;
+.input-group input {
+    border: solid 1.5px #7e7a7a;
+    width: 310px;
+    border-radius: 1rem;
+    background: none;
+    padding: 1rem;
+    font-size: 15px;
+    color: black;
+    transition: 150ms cubic-bezier(0.4, 0 ,0.2 , 1);
 }
-
-#container-formulario .caixas {
-    width: 100%;
-    margin: 30px 0;
+.input-group label {
+    font-size: 20px;
+    position: absolute;
+    left: 16px;
+    color: #e8e8e8;
+    pointer-events: none;
+    transform: translateY(1rem);
+    transition: 150ms cubic-bezier(0.4 , 0 , 0.2, 1 );
 }
-
-#container-formulario2 .caixas {
-    width: 100%;
-    margin: 30px 0;
+.input-group input:focus {
+    outline: none;
+    border: 1.5 solid #1a73e8;
 }
-
-#container-formulario label {
-    font-size: 17px;
-}
-
-#container-formulario2 label {
-    font-size: 17px;
-}
-
-#container-formulario .caixas .inputs {
-    width: 100%;
-    padding: 5px;
-    color: rgb(150,150,150);
-    border: 0;
-    border-bottom: 2px solid rgb(200,200,200);
-    outline: 0;
-}
-
-#container-formulario2 .caixas .inputs {
-    width: 100%;
-    padding: 5px;
-    color: rgb(150,150,150);
-    border: 0;
-    border-bottom: 2px solid rgb(200,200,200);
-    outline: 0;
-}
-
-#container-formulario .caixas .inputs:focus {
-    border: none;
-    border-bottom: 2px solid cornflowerblue;
-
-}
-
-#container-formulario2 .caixas .inputs:focus {
-    border: none;
-    border-bottom: 2px solid cornflowerblue;
+.input-group input:focus ~ label {
+    transform: translateY(-50%) scale(0.8);
+    background-color: #FFFFFF;
+    padding: 0 0.2rem;
+    color: #2196f3;
 }
 
 #container-formulario2 .caixas textarea {
