--- a/css/style.css
+++ b/css/style.css
@@ -335,65 +335,75 @@ input {
 }
 
 /* Formulário/ Contribuição*/
-#container-formulario {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
-#container-formulario2 {
+.container-formularios {
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin: 25px auto;
 }
 
-.input-group {
+.inputBox {
     position: relative;
-    margin-bottom: 20px;
+    width: 250px;
 }
 
-.input-group input {
-    border: solid 1.5px #7e7a7a;
-    width: 310px;
-    border-radius: 1rem;
-    background: none;
-    padding: 1rem;
-    font-size: 15px;
-    color: black;
-    transition: 150ms cubic-bezier(0.4, 0 ,0.2 , 1);
-}
-.input-group label {
-    font-size: 20px;
-    position: absolute;
-    left: 16px;
-    color: #e8e8e8;
-    pointer-events: none;
-    transform: translateY(1rem);
-    transition: 150ms cubic-bezier(0.4 , 0 , 0.2, 1 );
-}
-.input-group input:focus {
+.inputBox input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid rgba(128, 128, 128, 0.515);
+    background: white;
+    border-radius: 5px;
     outline: none;
-    border: 1.5 solid #1a73e8;
-}
-.input-group input:focus ~ label {
-    transform: translateY(-50%) scale(0.8);
-    background-color: #FFFFFF;
-    padding: 0 0.2rem;
-    color: #2196f3;
+    color: black;
+    font-size: 1rem;
 }
 
-#container-formulario2 .caixas textarea {
+.inputBox span {
+    position: absolute;
+    left: 0;
+    padding: 10px;
+    font-size: 0.95em;
+    color: rgba(128, 128, 128, 0.515); 
+    text-transform: uppercase;
+}
+
+.inputBox input:valid ~ span ,
+.inputBox input:focus ~ span 
+{
+    color: #8C0303;
+    transform: translateX(10px) translateY(-7px);
+    transition: 0.5s;
+    font-size: 1em;
+    padding: 0 10px;
+    background: white;
+    border-left: 1px solid #8C0303;
+    border-right: 1px solid #8C0303;
+    letter-spacing: 0.1em;
+}
+
+.inputBox:nth-child(1) input:valid ~ span ,
+.inputBox:nth-child(1) input:focus ~ span
+{
+    background: #8C0303;
+    color: white;
+    border-radius: 2px;
+}
+
+.inputBox input:valid,
+.inputBox input:focus 
+{
+    border: 1px solid #8C0303;
+}
+
+.inputTextarea textarea:focus, input:focus, select:focus {
+    box-shadow: 0 0 0 0;
     border: none;
-    border: 2px solid rgb(200,200,200);
+    border: #8C0303 2px solid;
     outline: 0;
-    font-family: "fira sans", 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
-#container-formulario2 .caixas textarea:focus {
-    border: none;
-    border: 2px solid cornflowerblue;
-}
+} 
 
 /* Formas de pagamento */
 #container-formas:not(button) {
@@ -514,6 +524,33 @@ form{
 }
 
 /* RESPONSIVIDADE DA PÁGINA HOME */
+@media screen and (min-width:1263px){
+
+    #container-inseguranca {
+        padding: 90px;
+    }
+
+    #flex-cartoes {
+       display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        gap: 20px;
+    }
+    
+    /* .alinhamento-inseguranca p {
+        max-width: 500px;
+    }
+
+    #titulo-inseguranca {
+        font-size: 90px;
+
+    }
+
+    .alinhamento-inseguranca .titulo-e-paragrafo p {
+        font-size: 80px;
+    } */
+}
+
 @media screen and (min-width:1214px){
     #destaque-home {
         display: flex;
@@ -689,10 +726,18 @@ form{
         margin-left: 75px;
     }
 
+    #titulo-inseguranca {
+        font-size: 18px;
+    }
+
     #leve, #moderada, #grave {
-        padding: 11px;
-        border-radius: 9px;
-        max-width: 80%;
+        padding: 8px;
+        border-radius: 6px;
+        max-width: 550px;
+    }
+
+    .alinhamento-inseguranca .titulo-e-paragrafo p {
+        font-size: 17px;
     }
 
     .alinhamento-inseguranca p {
@@ -726,10 +771,6 @@ form{
         height: 10rem;
         width: 12rem;
         font-size: 26px;
-    }
-
-    #container-formulario form{
-        max-width: 570px;
     }
 
     #container-formas label {
@@ -832,14 +873,6 @@ form{
     }
 
     #container-selecao .caixas textarea::placeholder{
-        font-size: 16px;
-    }
-
-    #container-formulario label {
-        font-size: 24px;
-    }
-
-    #container-formulario ::placeholder{
         font-size: 16px;
     }
 
@@ -946,18 +979,6 @@ form{
     }
 
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
