--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ nav h2 a {
 
 /* Destaque */
 #destaque-home {
-    background:url(../imagens/menina-na-porta.jpg);
+    background:url(../imagens/panelas-vazias.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -216,6 +216,14 @@ nav h2 a {
 
 #main-oq-fazemos {
     background-color: #A69851;
+}
+
+#main-oq-fazemos img {
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .cor {
