--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2? family= Raleway:wght@700 & family=Fira+Sans:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Raleway:wght@400;700;800&display=swap");
 
 * {
     box-sizing: border-box;
@@ -10,7 +10,7 @@ html {
 }
 
 body { 
-    font-family: "Fira Sans",'Courier New', Courier, monospace,; 
+    font-family: "Lato",'Courier New', Courier, monospace,; 
     height: 100vh;  
 }
 
@@ -54,12 +54,6 @@ nav h2 a {
     padding: 1rem;
     display: inline-block;
 }
-
-
-/* .menu a:hover, .menu a:focus {
-    background-color: #e64e4e8f;
-    border-radius: 6px;
-} */
 
 .menu {
     list-style: none;
@@ -116,7 +110,7 @@ nav h2 a {
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(2.8px);
+    -webkit-backdrop-filter: blur(3px);
     border: 1px solid rgba(140, 3, 3, 0.22);
     padding: 30px 20px;
 }
@@ -258,7 +252,8 @@ hr {
 /* Oq fazemos */
 
 #main-oq-fazemos {
-    background-color: #A69851;
+    background-color: #A69851; 
+    margin-bottom: 40px;
 }
 
 #main-oq-fazemos img {
