--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2? family= Raleway:wght@700 & family=Fira+Sans:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;700&family=Raleway:wght@700&display=swap');
 
 * {
     box-sizing: border-box;
@@ -10,8 +10,8 @@ html {
 }
 
 body { 
-    font-family: "Fira Sans",'Courier New', Courier, monospace,; 
-    height: 100vh;  
+    font-family: "Plus Jakarta Sans",'Courier New', Courier, monospace; 
+    /* height: 100vh;   */
 }
 
 h2 {
@@ -676,9 +676,9 @@ input {
 /* Botões animados */
 
 
-button {
+#destaque-home button, #container-confirmar button {
     position: relative;
-    background: white;
+    background: transparent;
     color: #8C0303;
     text-decoration: none;
     text-transform: uppercase;
@@ -689,7 +689,7 @@ button {
     transition: 0.2s;
   }
   
-  button:hover {
+  #destaque-home button:hover, #container-confirmar button:hover {
     letter-spacing: 0.2rem;
     padding: 1.1rem 3.1rem;
     background: #8C0303;
@@ -698,24 +698,24 @@ button {
     animation: box 3s infinite;
   }
   
-  button::before {
+  #container-confirmar button::before {
     content: "";
     position: absolute;
     inset: 2px;
     background: white;
   }
   
-  button span {
+  #destaque-home button span, #container-confirmar button span {
     position: relative;
     z-index: 1;
   }
-  button i {
+  #destaque-home button i, #container-confirmar button i {
     position: absolute;
     inset: 0;
     display: block;
   }
   
-  button i::before {
+   #destaque-home button i::before, #container-confirmar button i::before {
     content: "";
     position: absolute;
     width: 10px;
@@ -727,13 +727,13 @@ button {
     transition: 0.2s;
   }
   
-  button:hover i::before {
+  #destaque-home button:hover i::before, #container-confirmar button:hover i::before {
     width: 15px;
     left: 20%;
     animation: move 3s infinite;
   }
   
-  button i::after {
+  #destaque-home button i::after, #container-confirmar button i::after {
     content: "";
     position: absolute;
     width: 10px;
@@ -745,7 +745,7 @@ button {
     transition: 0.2s;
   }
   
-  button:hover i::after {
+  #destaque-home button:hover i::after, #destaque-home button:hover i::after {
     width: 15px;
     left: 80%;
     animation: move 3s infinite;
@@ -1035,9 +1035,20 @@ form{
     margin-top: 20px;
 }
 
+/* LOGIN */
+
+#form-login button, .nao-autorizado a, .doadores h2 span {
+    background-color: #8C0303;
+    color: white;
+}
+
+.nao-autorizado a:hover {
+    color: white;
+}
 
 
-/* responsividade */
+
+/* RESPONSIVIDADE */
 
 /* RESPONSIVIDADE MENU */
 @media screen and (min-width: 600px){
