--- a/css/style.css
+++ b/css/style.css
@@ -252,20 +252,25 @@ hr {
 /* Oq fazemos */
 
 #main-oq-fazemos {
-    background-color: #A69851; 
+    background-color:
     padding-bottom: 40px;
 }
 
-#main-oq-fazemos img {
+#main-oq-fazemos .oq-fazemos-img {
     width: 100%;
     height: 60vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    
+}
+.oq-contein{
+        
+    object-fit: cover;
 }
 
 .cor {
-    color: #fffffa;
+    color: #141414;
 }
 
 .aumento {
@@ -292,6 +297,16 @@ hr {
     font-weight: bold;
 }
 
+.fazemos-img1 img{
+    width: 250px;
+    height: 200px;
+}
+.fazemos-img1 figure{
+
+    width: 250px;
+    margin: 0 auto;
+    
+}
 /* Contribução */
 
 /* Cartão interativo */
@@ -1117,6 +1132,10 @@ form{
     .alinhamento-inseguranca .titulo-e-paragrafo p {
         font-size: 80px;
     } */
+    .oq-contein{
+        
+        object-fit: cover;
+    }
 }
 
 @media screen and (min-width:1214px){
@@ -1149,6 +1168,10 @@ form{
         width: 73px;
         height: 70px;
     }
+    .oq-contein{
+        
+        object-fit: cover;
+    }
 
 }
 
@@ -1172,6 +1195,10 @@ form{
         justify-content: center;
         max-width: 80%;
         margin: 0 auto;
+    }
+    .oq-contein{
+        
+        object-fit: cover;
     }
 }
 
@@ -1249,6 +1276,10 @@ form{
         margin: 0 auto;
         gap: 80px;
     }
+    .oq-contein{
+        
+        object-fit: cover;
+    }
 }
 
 /* RESPONSIVIDADE DA PÁGINA CONTRIBUIÇÃO */
@@ -1268,6 +1299,10 @@ form{
     #container-contribuicao img{
         width: 500px;
     }
+    .oq-contein{
+        
+        object-fit: cover;
+    }
 }
 
 /* A PARTIR DE 700PX */
@@ -1284,7 +1319,10 @@ form{
     #container-formulario {
         max-width: 1400px;
     }
-
+    .oq-contein{
+        
+        object-fit: cover;
+    }
 
 }
 
@@ -1311,7 +1349,10 @@ form{
     /* .alinhamento-inseguranca p {
         margin-left: 130px;
     } */
-    
+    .oq-contein{
+        
+        object-fit: cover;
+    }
 }
 
 /* A PARTIR DE 1158PX */
@@ -1365,6 +1406,11 @@ form{
         margin-bottom: 26px;
     }
 
+    .oq-contein{
+        
+        object-fit: cover;
+    }
+
 }
 
 /* A PARTIR DE 1334PX */
@@ -1392,6 +1438,10 @@ form{
 
     #container-formulario label {
         font-size: 20px;
+    }
+    .oq-contein{
+        
+        object-fit: cover;
     }
 }
 
@@ -1463,6 +1513,10 @@ form{
     #container-formas button {
         width: 130px;
     }
+    .oq-contein{
+        
+        object-fit: cover;
+    }
 }
 
 /* A PARTIR DE 1540PX */
@@ -1498,6 +1552,10 @@ form{
 
     #container-formulario .caixas {
         margin-left: 90px;
+    }
+    .oq-contein{
+        
+        object-fit: cover;
     }
 }
 
@@ -1548,6 +1606,10 @@ form{
     #container-formulario2 label {
         font-size: 22px;
         margin-top: 4px;
+    }
+    .oq-contein{
+        
+        object-fit: cover;
     }
 
 }
