--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,17 @@ nav h2 a {
     color: #fffffa;
 }
 
+/* TEMA ESCURO */
+header nav li button {
+    border: none;
+    background: transparent;
+}
+
+.modo-noturno {
+    background-color: black;
+    color: white;
+}
+
 /* PÁGINA HOME */
 
 /* Destaque */
@@ -241,6 +252,10 @@ hr {
     max-height: 5vh;
 }
 
+.rodape img {
+    width: 40px;
+}
+
 .rodape p {
     padding-bottom: 6px;
 }
@@ -252,7 +267,6 @@ hr {
 /* Oq fazemos */
 
 #main-oq-fazemos {
-    background-color:
     padding-bottom: 40px;
 }
 
