--- a/css/style.css
+++ b/css/style.css
@@ -247,6 +247,11 @@ hr {
     padding-top: 0.7rem;
     padding-bottom: 0.5rem;
     max-height: 5vh;
+    background-color: #f5f5f5;
+}
+
+footer {
+    background-color: #f5f5f5;
 }
 
 .rodape img {
